--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -74,6 +74,49 @@
         .next {
             right: 0;
         }
+         .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+        }
+
+        .modal-content img {
+            width: 100%;
+            height: auto;
+        }
+
+        /* 닫기 버튼 */
+        .close {
+            color: #9298cc;
+            position: absolute;
+            top: 10px;
+            right: 25px;
+            font-size: 35px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+        .close:before {
+            content: "×"; /* 닫기 버튼 모양 */
+        }
+        .close:hover,
+        .close:focus {
+            color: #9298cc;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -135,6 +178,20 @@
 
         function goBack() {
             window.history.back();
+        }
+        
+          // 이미지를 클릭했을 때 모달 창 열기
+        function openModal(imgSrc) {
+            var modal = document.getElementById("myModal");
+            var modalImg = document.getElementById("modalImg");
+            modal.style.display = "block";
+            modalImg.src = imgSrc;
+        }
+
+        // 모달 창 닫기
+        function closeModal() {
+            var modal = document.getElementById("myModal");
+            modal.style.display = "none";
         }
     </script>
 </body>
