--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -125,16 +125,16 @@
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <div class="book-slider">
             <div class="book-item">
-                <img src="다섯 번째 유서 00.jpg" alt="다섯 번째 유서 00">
+                <img src="다섯 번째 유서 00.jpg" alt="다섯 번째 유서 00"  onclick="openModal('다섯 번째 유서 00.jpg')">
             </div>
             <div class="book-item">
-                <img src="다섯 번째 유서 01.jpg" alt="다섯 번째 유서 01">
+                <img src="다섯 번째 유서 01.jpg" alt="다섯 번째 유서 01" onclick="openModal('다섯 번째 유서 01.jpg')">
             </div>
             <div class="book-item">
-                <img src="다섯 번째 유서 02.jpg" alt="다섯 번째 유서 02">
+                <img src="다섯 번째 유서 02.jpg" alt="다섯 번째 유서 02" onclick="openModal('다섯 번째 유서 02.jpg')">
             </div>
             <div class="book-item">
-                <img src="다섯 번째 유서 03.jpg" alt="다섯 번째 유서 03">
+                <img src="다섯 번째 유서 03.jpg" alt="다섯 번째 유서 03" onclick="openModal('다섯 번째 유서 03.jpg')">
             </div>
         </div>
         <button class="next" onclick="nextSlide()">&#10095;</button>
@@ -145,6 +145,14 @@
             <br>저는 입시 앞에 무력해진 대신 책을 쓸 수 있는 사람이 되었습니다. 대학교에서 생활할 날들을 병원에서 나기도 했고,<br>그곳에서 좋은 인연을 만나기도 했습니다. 그동안 성장하며 쓴 글을 나누고자 책을 엮었습니다.<br>그리고 이 책을 마지막 유서로 여기려 합니다.
         <br><br><br>128*196mm / 에세이 / 96p / 10,000원</p>
     </div>
+
+    <div id="myModal" class="modal">
+    <span class="close" onclick="closeModal()"></span>
+    <div class="modal-content">
+        <img id="modalImg" src="" alt="modal image">
+    </div>
+</div>
+    
     <button class="back-button" onclick="goBack()">←</button>
 
     <script>
