--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -74,29 +74,33 @@
         .next {
             right: 0;
         }
-         .modal {
-            display: none;
-            position: auto;
-            z-index: 1;
-            left: 100;
-            top: 100;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color:#fffffa;
-        }
+        .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 800px; /* 모니터의 80%를 차지하도록 설정하고, 최대 너비는 800px로 제한합니다. */
+    height: auto;
+    overflow: auto;
+    background-color: #fffffa;
+}
 
         .modal-content {
             margin: auto;
             display: block;
             width: 100%;
-            max-width: 700px;
+            max-width: 800px;
         }
 
-        .modal-content img {
-            width: 200%;
-            height: auto;
-        }
+    .modal-content img {
+    max-width: 100%; /* 이미지의 최대 너비를 모달 창의 너비에 맞춥니다. */
+    max-height: 80vh; /* 이미지의 최대 높이를 화면 높이의 80%로 제한합니다. */
+    display: block;
+    margin: auto; /* 이미지를 가운데 정렬합니다. */
+}
 
         /* 닫기 버튼 */
         .close {
