--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -74,33 +74,35 @@
         .next {
             right: 0;
         }
-        .modal {
+       .modal {
     display: none;
     position: fixed;
     z-index: 1;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
-    max-width: 800px; /* 모니터의 80%를 차지하도록 설정하고, 최대 너비는 800px로 제한합니다. */
-    height: auto;
+    width: 80%; /* 모달 창 너비 */
+    max-width: 800px; /* 최대 너비 설정 */
+    max-height: 80%; /* 모달 창 높이 */
     overflow: auto;
     background-color: #fffffa;
 }
 
-        .modal-content {
-            margin: auto;
-            display: block;
-            width: 100%;
-            max-width: 800px;
-        }
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 70%; /* 이미지 너비 */
+    max-width: 100%; /* 최대 너비 설정 */
+    height: auto; /* 이미지 높이 자동 조절 */
+}
 
-    .modal-content img {
-    max-width: 100%; /* 이미지의 최대 너비를 모달 창의 너비에 맞춥니다. */
-    max-height: 80vh; /* 이미지의 최대 높이를 화면 높이의 80%로 제한합니다. */
+.modal-content img {
+    max-width: 100%; /* 이미지 최대 너비 */
+    max-height: 100%; /* 이미지 최대 높이 */
     display: block;
     margin: auto; /* 이미지를 가운데 정렬합니다. */
 }
+
 
         /* 닫기 버튼 */
         .close {
