--- a/book 우리 중 아무도 그곳을 모른다.html
+++ b/book 우리 중 아무도 그곳을 모른다.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book 우리 중 아무도 그곳을 모른다</title>
+    <title>Book 다섯 번째 유서</title>
     <style>
         body {
             background-color: #fffffa;
@@ -74,49 +74,51 @@
         .next {
             right: 0;
         }
-         .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.9);
-        }
+       .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%; /* 모달 창 너비 */
+    max-width: 1200px; /* 최대 너비 설정 */
+    max-height: 90%; /* 모달 창 높이 */
+    overflow: auto;
+    background-color: #fffffa;
+}
 
-        .modal-content {
-            margin: auto;
-            display: block;
-            width: 80%;
-            max-width: 700px;
-        }
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 70%; /* 이미지 너비 */
+    max-width: 100%; /* 최대 너비 설정 */
+    height: auto; /* 이미지 높이 자동 조절 */
+}
 
-        .modal-content img {
-            width: 100%;
-            height: auto;
-        }
+.modal-content img {
+    max-width: 100%; /* 이미지 최대 너비 */
+    max-height: 100%; /* 이미지 최대 높이 */
+    display: block;
+    margin: auto; /* 이미지를 가운데 정렬합니다. */
+}
+
 
         /* 닫기 버튼 */
-        .close {
-            color: #9298cc;
-            position: absolute;
-            top: 10px;
-            right: 25px;
-            font-size: 35px;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-        .close:before {
-            content: "×"; /* 닫기 버튼 모양 */
-        }
-        .close:hover,
-        .close:focus {
-            color: #9298cc;
-            text-decoration: none;
-            cursor: pointer;
-        }
+       .close {
+    color: #9298cc;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:before {
+    content: "×"; /* 닫기 버튼 모양 */
+}
+
     </style>
 </head>
 <body>
@@ -125,16 +127,16 @@
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <div class="book-slider">
             <div class="book-item">
-                <img src="우리 중 아무도 그곳을 모른다 00.JPG" alt="우아모 00">
+                <img src="우리 중 아무도 그곳을 모른다 00.JPG" alt="우아모 00"  onclick="openModal('우리 중 아무도 그곳을 모른다 00.JPG')">
             </div>
             <div class="book-item">
-                <img src="우리 중 아무도 그곳을 모른다 01.jpg" alt="우아모 01">
+                <img src="우리 중 아무도 그곳을 모른다 01.jpg" alt="우아모 01"  onclick="openModal('우리 중 아무도 그곳을 모른다 01.jpg')">
             </div>
             <div class="book-item">
-                <img src="우리 중 아무도 그곳을 모른다 02.jpg" alt="우아모 02">
+                <img src="우리 중 아무도 그곳을 모른다 02.jpg" alt="우아모 02"  onclick="openModal('우리 중 아무도 그곳을 모른다 02.jpg')">
             </div>
             <div class="book-item">
-                <img src="우리 중 아무도 그곳을 모른다 03.jpg" alt="우아모 03">
+                <img src="우리 중 아무도 그곳을 모른다 03.jpg" alt="우아모 03"  onclick="openModal('우리 중 아무도 그곳을 모른다 03.jpg')">
             </div>
         </div>
         <button class="next" onclick="nextSlide()">&#10095;</button>
@@ -188,8 +190,8 @@
         function goBack() {
             window.history.back();
         }
-
-         // 이미지를 클릭했을 때 모달 창 열기
+ 
+          // 이미지를 클릭했을 때 모달 창 열기
         function openModal(imgSrc) {
             var modal = document.getElementById("myModal");
             var modalImg = document.getElementById("modalImg");
