--- a/book 우울증.html
+++ b/book 우울증.html
@@ -75,48 +75,50 @@
             right: 0;
         }
        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%; /* 모달 창 너비 */
-            max-width: 1200px; /* 최대 너비 설정 */
-            max-height: 90%; /* 모달 창 높이 */
-            overflow: auto;
-            background-color: #fffffa;
-        }
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%; /* 모달 창 너비 */
+    max-width: 1200px; /* 최대 너비 설정 */
+    max-height: 90%; /* 모달 창 높이 */
+    overflow: auto;
+    background-color: #fffffa;
+}
 
-        .modal-content {
-            margin: auto;
-            display: block;
-            width: 70%; /* 이미지 너비 */
-            max-width: 100%; /* 최대 너비 설정 */
-            height: auto; /* 이미지 높이 자동 조절 */
-        }
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 70%; /* 이미지 너비 */
+    max-width: 100%; /* 최대 너비 설정 */
+    height: auto; /* 이미지 높이 자동 조절 */
+}
 
-        .modal-content img {
-            max-width: 100%; /* 이미지 최대 너비 */
-            max-height: 100%; /* 이미지 최대 높이 */
-            display: block;
-            margin: auto; /* 이미지를 가운데 정렬합니다. */
-        }
+.modal-content img {
+    max-width: 100%; /* 이미지 최대 너비 */
+    max-height: 100%; /* 이미지 최대 높이 */
+    display: block;
+    margin: auto; /* 이미지를 가운데 정렬합니다. */
+}
+
 
         /* 닫기 버튼 */
-        .close {
-            color: #9298cc;
-            position: absolute;
-            top: 10px;
-            right: 25px;
-            font-size: 35px;
-            font-weight: bold;
-            transition: 0.3s;
-        }
+       .close {
+    color: #9298cc;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+    transition: 0.3s;
+}
 
-        .close:before {
-            content: "×"; /* 닫기 버튼 모양 */
-        }
+.close:before {
+    content: "×"; /* 닫기 버튼 모양 */
+}
+
     </style>
 </head>
 <body>
@@ -128,30 +130,29 @@
                 <img src="우울증 00.JPG" alt="우울증 00"  onclick="openModal('우울증 00.JPG')">
             </div>
             <div class="book-item">
-                <img src="우울증 01.jpg" alt="우울증 01"  onclick="openModal('우울증 01.jpg')">
+                <img src="우울증 01.jpg" alt="우울증 01" onclick="openModal('우울증 01.jpg')">
             </div>
             <div class="book-item">
-                <img src="우울증 02.jpg" alt="우울증 02"  onclick="openModal('우울증 02.jpg')">
+                <img src="우울증 02.jpg" alt="우울증 02" onclick="openModal('우울증 02.jpg')">
             </div>
             <div class="book-item">
-                <img src="우울증 03.jpg" alt="우울증 03"  onclick="openModal('우울증 03.jpg')">
+                <img src="우울증 03.jpg" alt="우울증 03" onclick="openModal('우울증 03.jpg')">
             </div>
         </div>
         <button class="next" onclick="nextSlide()">&#10095;</button>
     </div>
     <h2>우울증</h2>
     <div class="book-description">
-        <p>우울증 환자들이 느끼는 외로움, 벗어날 수 없는 삶의 굴레,
-            <br>드리워진 죽음 앞에서의 망설임과 두려움을 담은 그림책입니다.
-            <br><br><br>150*100mm / 그림책 / 24p / 8,000원</p>
+        <p>우울증 환자들이 느끼는 외로움, 벗어날 수 없는 삶의 굴레,<br>드리워진 죽음 앞에서의 망설임과 두려움을 담은 그림책입니다.
+        <br><br><br>150*100mm / 그림책 / 24p / 8,000원</p>
     </div>
 
     <div id="myModal" class="modal">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <div class="modal-content">
-            <img id="modalImg" src="" alt="modal image">
-        </div>
+    <span class="close" onclick="closeModal()"></span>
+    <div class="modal-content">
+        <img id="modalImg" src="" alt="modal image">
     </div>
+</div>
     
     <button class="back-button" onclick="goBack()">←</button>
 
@@ -188,7 +189,7 @@
             window.history.back();
         }
         
-        // 이미지를 클릭했을 때 모달 창 열기
+          // 이미지를 클릭했을 때 모달 창 열기
         function openModal(imgSrc) {
             var modal = document.getElementById("myModal");
             var modalImg = document.getElementById("modalImg");
@@ -204,4 +205,3 @@
     </script>
 </body>
 </html>
-
