--- a/books.html
+++ b/books.html
@@ -113,7 +113,7 @@ h1 a {
         </div>
         <div class="book-item">
             <a href="book Whats in my blue.html">
-                <img src="Whats in my blue 00.JPG" width="300px" height="auto" alt="book5">
+                <img src="Whats in my blue 00.jpg" width="300px" height="auto" alt="book5">
                 <p class="book-title">What's in my blue?</p>
             </a>
         </div>
