--- a/book 우리 중 아무도 그곳을 모른다.html
+++ b/book 우리 중 아무도 그곳을 모른다.html
@@ -145,7 +145,7 @@
     <div class="book-description">
         <p>정신질환자와 폐쇄병동에 대한 편견을 깨부수고자 만들었습니다.
             <br>아무도 알려주지 않았던 폐쇄병동에 대한 전반적인 지식과 주관적인 감상을 담은 위트 있는 안내 그래픽 노블입니다.
-        <br><br><br>210*297mm / 일러스트 / 23p / 10,000원</p>
+        <br><br><br>210*297mm / 일러스트 / 23p / 10,000원 / 구채현</p>
     </div>
 
     <div id="myModal" class="modal">
