--- a/books.html
+++ b/books.html
@@ -40,7 +40,7 @@
         .book-title {
             margin-top: 7px;
             color: #9298cc; /* 텍스트 색상 */
-            text-decoration: none; /* 밑줄 제거 */
+            text-decoration: none !important; /* 밑줄 제거 */
         }
         
         /* 링크 스타일 제거 및 글자 색상 지정 */
