--- a/authors.html
+++ b/authors.html
@@ -37,6 +37,13 @@
             color: #9298cc; /* 텍스트 색상 */
             text-decoration: none !important; /* 밑줄 제거 */
         }
+        footer {
+            text-align: center;
+            margin-top: 50px; /* 페이지 맨 아래에서의 여백 조절 */
+            padding: 20px 0; /* 푸터 내부 여백 조절 */
+            color: #9298cc;
+            background-color: none; /* 푸터 배경색 */
+        }
       
 /* 링크 스타일 제거 및 글자 색상 지정 */
         nav ul {
@@ -121,6 +128,9 @@ h1 a {
             </a>
         </div>
     </div>
+    <footer>
+        Copyright 2024. AoD Co. All rights reserved.
+    </footer>
 </body>
 </html>
 
