--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -103,7 +103,13 @@ h1 a {
     </nav>
   
     <div class="quote-container">
-         <div class="quote-item">
+        <div class="quote-item">
+            <a href="quote240509.html">
+                <img src="quote 240509 00.jpg" width="auto" height="300px" alt="quote4">
+                <p class="quote-title">2024.05.09.</p>
+            </a>
+        </div>
+        <div class="quote-item">
             <a href="quote240430.html">
                 <img src="quote 240430 00.jpg" width="auto" height="300px" alt="quote3">
                 <p class="quote-title">2024.04.30.</p>
