--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -104,6 +104,13 @@ h1 a {
   
     <div class="quote-container">
         <div class="quote-item">
+            <a href="quote240516.html">
+                <img src="quote 240509 00.jpeg" width="auto" height="300px" alt="quote5">
+                <p class="quote-title">2024.05.16.</p>
+            </a>
+        </div>
+        
+        <div class="quote-item">
             <a href="quote240509.html">
                 <img src="quote 240509 00.jpg" width="auto" height="300px" alt="quote4">
                 <p class="quote-title">2024.05.09.</p>
