--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -9,17 +9,17 @@
         body {
             background-color: #fffffa;
             text-align: left;
-            margin-left: 35px
+            margin-left: 35px;
         }
         h1 {
             font-size: 48px;
             margin-top: 20px;
-            margin-left: 30px
+            margin-left: 30px;
         }
          h2 {
             font-size: 35px;
             margin-top: 20px;
-            margin-left: 35px
+            margin-left: 35px;
         }
         .quote-container {
             display: flex;
@@ -29,10 +29,10 @@
         }
     
         .quote-item {
-            flex: 0 0 20%;
+            flex: 1 1 20%;
             max-width: 20%;
-            margin: 35px;
-            margin-right: -100px;
+            box-sizing: border-box;
+            margin: 35px 20px 35px 0; /* margin-right 조정 */
             text-align: left;
             padding: 10px;
         }
@@ -61,24 +61,24 @@
         nav a:not(:last-child) {
             margin-right: 20px;
         }
-h1 ul {
-   list-style-type: none;
-    padding: 0;
-}
-h1 ul li {
-    display: inline;
-}
-h1 a {
-    text-decoration: none; /* 밑줄 제거 */
+        h1 ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        h1 ul li {
+            display: inline;
+        }
+        h1 a {
+            text-decoration: none; /* 밑줄 제거 */
             color: #9298cc; /* 버튼 글자색 */
             padding: 10px; /* 버튼 간격 조절 */
-}
-                a {
-    text-decoration: none; /* 밑줄 제거 */
-    color: #9298cc; /* 텍스트 색상 변경 */
-    /* 다른 원하는 스타일 추가 */
-}
- footer {
+        }
+        a {
+            text-decoration: none; /* 밑줄 제거 */
+            color: #9298cc; /* 텍스트 색상 변경 */
+            /* 다른 원하는 스타일 추가 */
+        }
+        footer {
             text-align: center;
             margin-top: 50px; /* 페이지 맨 아래에서의 여백 조절 */
             padding: 20px 0; /* 푸터 내부 여백 조절 */
@@ -98,7 +98,6 @@ h1 a {
             <li><a href="goods.html">goods shop</a></li>
             <li><a href="weeklyquotes.html">weekly quotes</a></li>
             <li><a href="https://www.instagram.com/aod.co_/">instagram</a></li>
-            
         </ul>
     </nav>
   
