--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -29,12 +29,18 @@
         }
     
         .quote-item {
-            flex: 1 1 20%;
+            flex: 0 0 20%;
             max-width: 20%;
             box-sizing: border-box;
             margin: 35px 20px 35px 0; /* margin-right 조정 */
             text-align: left;
             padding: 10px;
+        }
+        .quote-item img {
+            width: auto; /* 이미지가 부모 요소의 폭을 채우도록 설정 */
+            height: 300px; /* 이미지의 세로 비율을 유지함 */
+            display: block; /* 이미지를 블록 요소로 설정하여 수직 정렬이 제대로 이루어지도록 함 */
+            margin-bottom: 10px; /* 이미지 아래 여백 추가 */
         }
         .quote-title {
             margin-top: 7px;
@@ -102,6 +108,13 @@
     </nav>
   
     <div class="quote-container">
+        <div class="quote-item">
+            <a href="quote240526.html">
+                <img src="quote 240526 00.jpg" width="auto" height="300px" alt="quote4">
+                <p class="quote-title">2024.05.26.</p>
+            </a>
+        </div>
+        
         <div class="quote-item">
             <a href="quote240516.html">
                 <img src="quote 240516 00.jpeg" width="auto" height="300px" alt="quote5">
