--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -16,36 +16,33 @@
             margin-top: 20px;
             margin-left: 30px;
         }
-         h2 {
+        h2 {
             font-size: 35px;
             margin-top: 20px;
             margin-left: 35px;
         }
         .quote-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            grid-gap: 20px;
             margin-top: 20px;
         }
     
         .quote-item {
-            flex: 1 1 calc(20% - 40px);
-            max-width: calc(20% - 40px);
-            box-sizing: border-box;
-            margin: 20px;
             text-align: left;
             padding: 10px;
+            box-sizing: border-box;
         }
         .quote-item img {
-            width: auto; /* 이미지가 부모 요소의 폭을 유지하도록 설정 */
-            height: 300px; /* 이미지의 세로 비율을 일정하게 유지함 */
-            display: block; /* 이미지를 블록 요소로 설정하여 수직 정렬이 제대로 이루어지도록 함 */
-            margin-bottom: 10px; /* 이미지 아래 여백 추가 */
+            width: auto;
+            height: 300px;
+            display: block;
+            margin: 0 auto 10px auto; /* 수평 가운데 정렬 및 아래 여백 추가 */
         }
         .quote-title {
             margin-top: 7px;
-            color: #9298cc; /* 텍스트 색상 */
-            text-decoration: none !important; /* 밑줄 제거 */
+            color: #9298cc;
+            text-decoration: none !important;
         }
         
         /* 링크 스타일 제거 및 글자 색상 지정 */
@@ -56,14 +53,13 @@
         nav ul li {
             display: inline;
             margin-left: 30px;
-            margin-right: 20px; /* 각 항목 사이 간격 조절 */
+            margin-right: 20px;
         }
         nav a {
-            text-decoration: none; /* 밑줄 제거 */
-            color: #9298cc; /* 버튼 글자색 */
-            padding: 10px; /* 버튼 간격 조절 */
+            text-decoration: none;
+            color: #9298cc;
+            padding: 10px;
         }
-        /* 버튼 사이 공백 조절 */
         nav a:not(:last-child) {
             margin-right: 20px;
         }
@@ -75,21 +71,20 @@
             display: inline;
         }
         h1 a {
-            text-decoration: none; /* 밑줄 제거 */
-            color: #9298cc; /* 버튼 글자색 */
-            padding: 10px; /* 버튼 간격 조절 */
+            text-decoration: none;
+            color: #9298cc;
+            padding: 10px;
         }
         a {
-            text-decoration: none; /* 밑줄 제거 */
-            color: #9298cc; /* 텍스트 색상 변경 */
-            /* 다른 원하는 스타일 추가 */
+            text-decoration: none;
+            color: #9298cc;
         }
         footer {
             text-align: center;
-            margin-top: 50px; /* 페이지 맨 아래에서의 여백 조절 */
-            padding: 20px 0; /* 푸터 내부 여백 조절 */
+            margin-top: 50px;
+            padding: 20px 0;
             color: #9298cc;
-            background-color: none; /* 푸터 배경색 */
+            background-color: none;
         }
     </style>
 </head>
@@ -152,3 +147,4 @@
     </footer>
 </body>
 </html>
+
