--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -41,6 +41,7 @@
             height: 300px; /* 이미지의 세로 비율을 유지함 */
             display: block; /* 이미지를 블록 요소로 설정하여 수직 정렬이 제대로 이루어지도록 함 */
             margin-bottom: 10px; /* 이미지 아래 여백 추가 */
+            margin-right: 30px;
         }
         .quote-title {
             margin-top: 7px;
