--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -10,6 +10,7 @@
             background-color: #fffffa;
             text-align: left;
             margin-left: 35px;
+            margin-right: 35px;
         }
         h1 {
             font-size: 48px;
