--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -24,7 +24,7 @@
         }
         .quote-container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(200px, 100%));
             gap: 70px;
             margin: 20px 35px 20px 35px; /* 컨테이너 양 옆에 35px 마진 설정 */
         }
