--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -25,14 +25,14 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: flex-start;
-            margin-top: 20px;
+            margin: 20px 35px 20px 35px;
         }
     
         .quote-item {
             flex: 1 1 20%;
             max-width: 60%;
             box-sizing: border-box;
-            margin: 35px 20px 35px 0; /* margin-right 조정 */
+            margin: 10px 0px 35px 0; /* margin-right 조정 */
             text-align: left;
             padding: 10px;
         }
